attempt to fix card remaining on hovered state on mobile

--- a/src/components/Deck.css
+++ b/src/components/Deck.css
@@ -44,15 +44,15 @@
   }
 }
   
-  
+.total_card {
+  z-index: 0;
+}
+
 @media (hover: hover) {
   .total_card:hover {
       z-index: 100;
   }
 }
-  
-  
-  
   
   /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
